tests/rspack-test/configCases/errors/bail/errors.js
module.exports = [[/Can't resolve/]]
